include authentication in swagger.
